# succinctx

./: Cargo.toml
plonky2x/core/src/backend/wrapper/: plonky2_config.rs  wrap.rs
plonky2x/core/src/frontend/hash/sha/sha256/: pad.rs
plonky2x/core/src/frontend/hash/sha/sha512/: pad.rs
plonky2x/core/src/frontend/uint/num/u32/gadgets/: multiple_comparison.rs
plonky2x/core/src/frontend/uint/num/u32/gates/: add_many_u32.rs  comparison.rs  range_check_u32.rs
plonky2x/core/src/utils/: mod.rs
