[workspace]
members = ["plonky2x/core", "plonky2x/derive", "rustx", "client"]
resolver = "2"

[profile.release]
opt-level = 3
incremental = true
#lto = "fat"
#codegen-units = 1

[profile.bench]
opt-level = 3

[patch.'https://github.com/0xPolygonZero/plonky2.git']
plonky2 = { git = "https://github.com/QEDProtocol/plonky2-hwa", rev = "6a8ca008da97890b67a84f64784cfbc488b5238d" }

[patch.'https://github.com/succinctlabs/starkyx.git']
starkyx = { git = "https://github.com/QEDProtocol/starkyx", rev = "a53ea1060c6256a8a26820e43fbe8d75233e8b29" }
